// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given connected, when rendering, then show account and no button 1`] = `
<Container>
  <Grid>
    <GridRow>
      <GridColumn>
        <Logo />
        <p>
          You are ready to use the Logion wallet, congratulations!
        </p>
        <p>
          The following accounts were detected:
        </p>
        <ul>
          <li>
            address
             (
            name
            )
          </li>
        </ul>
        <p>
          You are currently 
          connected
        </p>
      </GridColumn>
    </GridRow>
  </Grid>
</Container>
`;

exports[`Given disconnected, when rendering, then show disconnected and button 1`] = `
<Container>
  <Grid>
    <GridRow>
      <GridColumn>
        <Logo />
        <p>
          You are ready to use the Logion wallet, congratulations!
        </p>
        <p>
          The following accounts were detected:
        </p>
        <ul>
          <li>
            address
             (
            name
            )
          </li>
        </ul>
        <p>
          You are currently 
          disconnected
        </p>
        <Button
          as="button"
        >
          Connect
        </Button>
      </GridColumn>
    </GridRow>
  </Grid>
</Container>
`;
